--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Panda</h1>
     <img src="panda.jpg" alt="Panda Image">
+    <P>Panda is cute Pet
+        
+    </P>
 </body>
 </html>
